# maritime_document_extractor

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  extract.py  health.py
app/db/: base.py  health.py  models.py
app/db/repos/: extraction_repo.py  job_repo.py  session_repo.py  validation_repo.py
app/llm/: __init__.py  base.py  factory.py  prompts.py  types.py
app/llm/providers/: __init__.py  gemini.py
app/queue/: __init__.py  manager.py
app/schemas/: __init__.py  extraction.py  health.py
app/services/: __init__.py  extraction_core.py  sync_extraction.py
app/utils/: __init__.py  document_preparation.py  hash.py  json_extractor.py
migrations/: README.md  env.py
migrations/versions/: 001_initial_schema.py
tests/: conftest.py
tests/integration/: test_database_migrations.py  test_extract_sync.py  test_health.py  test_repositories.py
tests/support/: builders.py
tests/unit/: test_app_bootstrap.py  test_config.py  test_db_base.py  test_document_preparation.py  test_extraction_core.py  test_gemini_provider.py  test_health.py  test_json_extractor.py  test_llm_factory.py  test_sync_extraction.py
